// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Bookmark /> render correctly renders Bookmark if authorized 1`] = `
<button
  className="main-button button main-button--active"
  onClick={[Function]}
  type="button"
>
  <svg
    className="main-icon"
    height="19"
    width="18"
  >
    <use
      xlinkHref="#icon-bookmark"
    />
  </svg>
  <span
    className="visually-hidden"
  >
    In bookmarks
  </span>
</button>
`;

exports[`<Bookmark /> render correctly renders Bookmark if not authorized 1`] = `
<a
  href="/login"
  onClick={[Function]}
>
  <button
    className="main-button button main-button--active"
    type="button"
  >
    <svg
      className="main-icon"
      height="19"
      width="18"
    >
      <use
        xlinkHref="#icon-bookmark"
      />
    </svg>
    <span
      className="visually-hidden"
    >
      In bookmarks
    </span>
  </button>
</a>
`;
